--- a/Tasks/Task 2.ipynb
+++ b/Tasks/Task 2.ipynb
@@ -181,9 +181,7 @@
     "        if isPrime(i):\n",
     "            n+=1\n",
     "\n",
-    "    return str(p) + ' is the ' + str(n) + ' prime number'\n",
-    "\n",
-    "countPrime(113)\n"
+    "    return str(p) + ' is the ' + str(n) + ' prime number'"
    ]
   }
  ],
