--- a/Tasks/Task 3.ipynb
+++ b/Tasks/Task 3.ipynb
@@ -210,7 +210,7 @@
     "        break\n",
     "    else:\n",
     "        z += 1\n",
-    "        print(z)\n"
+    "        print(z)"
    ]
   }
  ],
