--- a/Tasks/Task 3.ipynb
+++ b/Tasks/Task 3.ipynb
@@ -16,7 +16,7 @@
     "                break\n",
     "        if l:\n",
     "            x.append(i)\n",
-    "    return x\n"
+    "    return x"
    ]
   },
   {
@@ -38,7 +38,7 @@
     "        else:\n",
     "            break\n",
     "\n",
-    "    return t\n"
+    "    return t"
    ]
   },
   {
@@ -52,7 +52,7 @@
     "    for i in range(2, d):\n",
     "        if (d % i == 0):\n",
     "            t .add(i)\n",
-    "    return t\n"
+    "    return t"
    ]
   },
   {
@@ -91,7 +91,7 @@
     "    for i in range(2, max(a, b)):\n",
     "        if (a % i == 0) and (b % i == 0):\n",
     "            t .add(i)\n",
-    "    return t\n"
+    "    return t"
    ]
   },
   {
@@ -133,7 +133,7 @@
     "    for i in range(2, n):\n",
     "        if (n % i == 0) and isPrime(i):\n",
     "            t .add(i)\n",
-    "    return t\n"
+    "    return t"
    ]
   },
   {
