--- a/Tasks/Task 1.ipynb
+++ b/Tasks/Task 1.ipynb
@@ -162,7 +162,7 @@
     "for i in range(start, end):\n",
     "    n = n*i\n",
     "\n",
-    "print(n**(1/(end-start)))\n"
+    "print(n**(1/(end-start)))"
    ]
   }
  ],
