--- a/Tasks/Task 3.ipynb
+++ b/Tasks/Task 3.ipynb
@@ -140,12 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/michael/Desktop/code/School/Codeing-And-Algorithims/Tasks/Task 3.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 14>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/michael/Desktop/code/School/Codeing-And-Algorithims/Tasks/Task%203.ipynb#ch0000008?line=10'>11</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m l\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/michael/Desktop/code/School/Codeing-And-Algorithims/Tasks/Task%203.ipynb#ch0000008?line=13'>14</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m2\u001b[39m, maxPrime):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/michael/Desktop/code/School/Codeing-And-Algorithims/Tasks/Task%203.ipynb#ch0000008?line=14'>15</a>\u001b[0m     \u001b[39mif\u001b[39;00m isPrime(i):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/michael/Desktop/code/School/Codeing-And-Algorithims/Tasks/Task%203.ipynb#ch0000008?line=15'>16</a>\u001b[0m         primes\u001b[39m.\u001b[39mappend(i)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/michael/Desktop/code/School/Codeing-And-Algorithims/Tasks/Task%203.ipynb#ch0000008?line=17'>18</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39minit\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32m/Users/michael/Desktop/code/School/Codeing-And-Algorithims/Tasks/Task 3.ipynb Cell 9\u001b[0m in \u001b[0;36misPrime\u001b[0;34m(p)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/michael/Desktop/code/School/Codeing-And-Algorithims/Tasks/Task%203.ipynb#ch0000008?line=5'>6</a>\u001b[0m l \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/michael/Desktop/code/School/Codeing-And-Algorithims/Tasks/Task%203.ipynb#ch0000008?line=6'>7</a>\u001b[0m \u001b[39mfor\u001b[39;00m n \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m2\u001b[39m, p \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/michael/Desktop/code/School/Codeing-And-Algorithims/Tasks/Task%203.ipynb#ch0000008?line=7'>8</a>\u001b[0m     \u001b[39mif\u001b[39;00m (p \u001b[39m%\u001b[39;49m n \u001b[39m==\u001b[39;49m \u001b[39m0\u001b[39;49m):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/michael/Desktop/code/School/Codeing-And-Algorithims/Tasks/Task%203.ipynb#ch0000008?line=8'>9</a>\u001b[0m         l \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/michael/Desktop/code/School/Codeing-And-Algorithims/Tasks/Task%203.ipynb#ch0000008?line=9'>10</a>\u001b[0m         \u001b[39mbreak\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "primes = list()\n",
-    "max = 10_000\n",
+    "maxPrime = 10_000_000\n",
     "\n",
     "\n",
     "def isPrime(p):\n",
@@ -157,7 +170,7 @@
     "    return l\n",
     "\n",
     "\n",
-    "for i in range(2, max):\n",
+    "for i in range(2, maxPrime):\n",
     "    if isPrime(i):\n",
     "        primes.append(i)\n",
     "\n",
@@ -186,20 +199,19 @@
     "\n",
     "    return primes[n]\n",
     "\n",
-    "\n",
-    "z = 1\n",
     "while True:\n",
-    "\n",
-    "    if z >= number:\n",
-    "        print(\"Couldent find pair\")\n",
-    "        break\n",
-    "\n",
-    "    if binSearch(number-z)+binSearch(z) == number:\n",
-    "        print(binSearch(number-z), binSearch(z))\n",
-    "        break\n",
-    "    else:\n",
-    "        z += 1\n",
-    "        print(z)"
+    "    z = 1\n",
+    "    while True:\n",
+    "    \n",
+    "        if z >= number:\n",
+    "            print(\"Couldent find pair\")\n",
+    "            break\n",
+    "        \n",
+    "        if binSearch(number-z)+binSearch(z) == number:\n",
+    "            print(binSearch(number-z), binSearch(z))\n",
+    "            break\n",
+    "        else:\n",
+    "            z += 1"
    ]
   }
  ],
